<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="GVL_Persistent" Id="{c4d03ea6-35af-4633-972d-fef3cfe7daa9}">
    <Declaration><![CDATA[
VAR_GLOBAL PERSISTENT
	
	aDataHistory					: ARRAY [0..200] OF ST_CycleData;
	nIndexDataHistory				: DINT;	

/////////////////////////////////////////////////////////////////////////////////////Event Log/////////////////////////////////////////////////////////////////////////////////////
	
	stAlarmHistory				: ARRAY [00..250] OF ST_AlarmHistory;
	aEventLog					: ARRAY [0..250] OF T_MaxSTring;	//Event log - connected to alarm history in HMI	
	aTimeLog					: ARRAY [0..250] OF T_MaxSTring;
	aDateLog					: ARRAY [0..250] OF T_MaxSTring;	
	
	stUserLog					: ARRAY [0..250] OF ST_UserLog;
	


END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>