<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="D_1_WriteDataToCSV" Id="{8bb60ee9-5e44-4ae0-acc5-7c13f4e456bb}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM D_1_WriteDataToCSV
VAR
	
	bWrite			: BOOL := FALSE;(* Rising edge starts program execution *)
	sFileName		: T_MaxString ;(* CSV destination file path and name *)
	sCSVLine		: T_MaxString := '';(* Single CSV text line (row, record), we are using string as record buffer (your are able to see created fields) *)
	sCSVField		: T_MaxString := '';(* Single CSV field value (column, record field) *)
	bBusy			: BOOL;
	bError			: BOOL;
	nErrId			: UDINT;
	nRow	 		: UDINT 	:= 0;(* Row number (record) *)
	nColumn			: UDINT 	:= 0;(* Column number (record field) *)
	hFile			: UINT		:= 0;(* File handle of the source file *)
	step			: DWORD 	:= 0;
	fbFileOpen		: FB_FileOpen;(* Opens file *)
	fbFileClose		: FB_FileClose;(* Closes file *)
	fbFilePuts		: FB_FilePuts;(* Writes one record (line) *)
	fbWriter		: FB_CSVMemBufferWriter;(* Helper function block used to create CSV data bytes (single record line) *)

	database		: ARRAY[0..MAX_CSV_ROWS, 0..MAX_CSV_COLUMNS ] OF STRING(MAX_CSV_FIELD_LENGTH);  
	
	nCSVIndex		: DINT;
	sCSVIndex		: STRING;
	rChangeCSVTrigger: R_TRIG;
	i				: DINT;
	j				: DINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[a_ACT_IO();
b_SettingsToCsv();

CASE step OF
	0:	(* Wait for rising edge at bWrite variable *)
		IF bWrite THEN
			bWrite 	:= FALSE;
			bBusy 	:= TRUE;
			bError	:= FALSE;
			nErrId	:= 0;
			hFile	:= 0;
			nRow	:= 0;
			nColumn	:= 0;
			step 	:= 1;
		END_IF

	1:	(* Open source file *)
		fbFileOpen(  bExecute := FALSE  );
		fbFileOpen( sNetId := NetAmsId , sPathName := sFileName, nMode := FOPEN_MODEWRITE OR FOPEN_MODETEXT,(* Open file in TEXT mode! *)
					ePath := PATH_GENERIC, bExecute := TRUE );
		step := 2;

	2:(* Wait until open not busy *)
		fbFileOpen( bExecute := FALSE, bError => bError, nErrID => nErrID, hFile => hFile );
		IF NOT fbFileOpen.bBusy THEN
			IF NOT fbFileOpen.bError THEN
				step := 3;
			ELSE(* Error: file not found? *)
				step := 100;
			END_IF
		END_IF

	3:(* Convert one PLC record to CSV format *)
		sCSVLine := '';
		fbWriter.eCmd := eEnumCmd_First;(* Write first field value *)
		IF nRow <= MAX_CSV_ROWS THEN

			FOR nColumn := 0 TO MAX_CSV_COLUMNS BY 1 DO

				sCSVField := STRING_TO_CSVFIELD( database[ nRow, nColumn ], FALSE );(* TODO: Get field value from your application *)

				(* Add new field to the record buffer *)
				fbWriter( 	pBuffer := ADR( sCSVLine ), cbBuffer := SIZEOF( sCSVLine ) - 1, putValue := sCSVField, pValue := 0, cbValue := 0,
							bCRLF := ( nColumn = MAX_CSV_COLUMNS ) );(* bCRLF == TRUE => Write CRLF after the last field value *)
				IF fbWriter.bOk THEN
					fbWriter.eCmd := eEnumCmd_Next;(* Write next field value *)
				ELSE(* Error *)
					step := 100;
					RETURN;
				END_IF
				
			END_FOR(* FOR nColumn := 0... *)

			(* FB_FilePuts adds allready CR (carriage return) to the written line.
			We have to replace the $R$L characters with $L character to avoid double CR. *)
			IF RIGHT( sCSVLine, 2 ) = '$R$L' THEN
				sCSVLine := REPLACE( sCSVLine, '$L', 2, LEN( sCSVLine ) - 1 );
			END_IF

			nRow := nRow + 1;(* Increment number of created records (rows) *)
			step := 4;(* Write record to the file *)

		ELSE(* All rows written => Close file *)
			step := 10;
		END_IF

	4:	(* Write single text line *)
		fbFilePuts( bExecute := FALSE );
		fbFilePuts( sNetId := NetAmsId , hFile := hFile, sLine := sCSVLine, bExecute := TRUE );
		step := 5;

	5:(* Wait until write not busy *)
		fbFilePuts( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF NOT fbFilePuts.bBusy THEN
			IF NOT fbFilePuts.bError THEN
				step := 3;(* Write next record *)
			ELSE(* Error *)
				step := 100;
			END_IF
		END_IF

	10:	(* Close source file *)
		fbFileClose( bExecute := FALSE );
		fbFileClose( sNetId := NetAmsId , hFile := hFile, bExecute := TRUE );
		step := 11;

	11:(* Wait until close not busy *)
		fbFileClose( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF ( NOT fbFileClose.bBusy ) THEN
			hFile := 0;
			step := 100;
		END_IF

	100: (* Error or ready step => cleanup *)
		IF ( hFile <> 0 ) THEN
			step := 10; (* Close the source file *)
		ELSE
			bBusy := FALSE;
			step := 0;	(* Ready *)
		END_IF

END_CASE
]]></ST>
    </Implementation>
    <Action Name="a_ACT_IO" Id="{74448af2-2260-4b11-b747-8d46a6e766c7}">
      <Implementation>
        <ST><![CDATA[//database	:=

//INPUTS
bWrite									:= stCSVProcess.bWriteData;

//OUTPUTS
stCSVProcess.bBusy						:= bBusy;
stCSVProcess.bError						:= bError;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_SettingsToCsv" Id="{8fb8656f-ce7c-495e-9320-0f58582e5fe8}">
      <Implementation>
        <ST><![CDATA[rChangeCSVTrigger( CLK := nIndexDataHistory = 200);
IF nIndexDataHistory = 200 THEN
	FOR i := 0 TO 200 DO
		FOR j := 0 TO 28 DO
			database[i,j]				:='';
		END_FOR
	END_FOR 
END_IF
IF rChangeCSVTrigger.Q THEN
	nCSVIndex							:= nCSVIndex + 1;
	nIndexDataHistory 					:= 0;
END_IF

sCSVIndex 								:= DINT_TO_STRING(nCSVIndex);

sFileName 								:= CONCAT(stCSVProcess.sFileName1,CONCAT(sCSVIndex,stCSVProcess.sFileName2));

IF nCSVIndex = 100 THEN
	nCSVIndex 							:= 0;
END_IF

database[nIndexDataHistory,0]			:= aDataHistory[0].sSetting1_1;	
database[nIndexDataHistory,1]			:= DINT_TO_STRING(aDataHistory[0].nSetting2_1);

IF 	aDataHistory[0].bSetting3_1 THEN
	database[nIndexDataHistory,2]			:= 'TRUE';	
ELSE database[nIndexDataHistory,2]			:= 'FALSE';
END_IF
	
database[nIndexDataHistory,3]			:= aDataHistory[0].sDATA1_1;	
database[nIndexDataHistory,4]			:= DINT_TO_STRING(aDataHistory[0].nDATA2_1);	

IF 	aDataHistory[0].bDATA3_1 THEN
	database[nIndexDataHistory,5]			:= 'TRUE';	
ELSE database[nIndexDataHistory,5]			:= 'FALSE';
END_IF
	
IF 	aDataHistory[0].bPass_1 THEN
	database[nIndexDataHistory,6]			:= 'TRUE';	
ELSE database[nIndexDataHistory,6]			:= '';
END_IF

IF 	aDataHistory[0].bFail_1 THEN
	database[nIndexDataHistory,7]			:= 'TRUE';	
ELSE database[nIndexDataHistory,7]			:= '';
END_IF
	
database[nIndexDataHistory,8]			:= aDataHistory[0].sSetting1_2;
database[nIndexDataHistory,9]			:= DINT_TO_STRING(aDataHistory[0].nSetting2_2);	

IF 	aDataHistory[0].bSetting3_2 THEN
	database[nIndexDataHistory,10]			:= 'TRUE';	
ELSE database[nIndexDataHistory,10]			:= 'FALSE';
END_IF
	
database[nIndexDataHistory,11]			:= aDataHistory[0].sDATA1_2;	
database[nIndexDataHistory,12]			:= DINT_TO_STRING(aDataHistory[0].nDATA2_2);	

IF 	aDataHistory[0].bDATA3_2 THEN
	database[nIndexDataHistory,13]			:= 'TRUE';	
ELSE database[nIndexDataHistory,13]			:= 'FALSE';
END_IF
	
IF 	aDataHistory[0].bPass_2 THEN
	database[nIndexDataHistory,14]			:= 'TRUE';	
ELSE database[nIndexDataHistory,14]			:= '';
END_IF

IF 	aDataHistory[0].bFail_2 THEN
	database[nIndexDataHistory,15]			:= 'TRUE';	
ELSE database[nIndexDataHistory,15]			:= '';
END_IF
	
database[nIndexDataHistory,16]			:= aDataHistory[0].sSetting1_3;
database[nIndexDataHistory,17]			:= DINT_TO_STRING(aDataHistory[0].nSetting2_3);	

IF 	aDataHistory[0].bSetting3_3 THEN
	database[nIndexDataHistory,18]			:= 'TRUE';	
ELSE database[nIndexDataHistory,18]			:= 'FALSE';
END_IF
	
database[nIndexDataHistory,19]			:= aDataHistory[0].sDATA1_3;	
database[nIndexDataHistory,20]			:= DINT_TO_STRING(aDataHistory[0].nDATA2_3);

IF 	aDataHistory[0].bDATA3_3 THEN
	database[nIndexDataHistory,21]			:= 'TRUE';	
ELSE database[nIndexDataHistory,21]			:= 'FALSE';
END_IF	
	
IF 	aDataHistory[0].bPass_3 THEN
	database[nIndexDataHistory,22]			:= 'TRUE';	
ELSE database[nIndexDataHistory,22]			:= '';
END_IF

IF 	aDataHistory[0].bFail_3 THEN
	database[nIndexDataHistory,23]			:= 'TRUE';	
ELSE database[nIndexDataHistory,23]			:= '';
END_IF
	
IF 	aDataHistory[0].bPass THEN
	database[nIndexDataHistory,24]			:= 'TRUE';	
ELSE database[nIndexDataHistory,24]			:= '';
END_IF

IF 	aDataHistory[0].bFail THEN
	database[nIndexDataHistory,25]			:= 'TRUE';	
ELSE database[nIndexDataHistory,25]			:= '';
END_IF

		
database[nIndexDataHistory,26]			:= aDataHistory[0].sData;		
database[nIndexDataHistory,27]			:= aDataHistory[0].sTime;		
	
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="D_1_WriteDataToCSV">
      <LineId Id="106" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="6" Count="99" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="D_1_WriteDataToCSV.a_ACT_IO">
      <LineId Id="1" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="7" Count="1" />
    </LineIds>
    <LineIds Name="D_1_WriteDataToCSV.b_SettingsToCsv">
      <LineId Id="13" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="135" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="140" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="17" Count="1" />
      <LineId Id="21" Count="2" />
      <LineId Id="66" Count="0" />
      <LineId Id="63" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="65" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="68" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="74" Count="2" />
      <LineId Id="73" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="79" Count="2" />
      <LineId Id="78" Count="0" />
      <LineId Id="83" Count="3" />
      <LineId Id="82" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="88" Count="3" />
      <LineId Id="87" Count="0" />
      <LineId Id="37" Count="2" />
      <LineId Id="93" Count="3" />
      <LineId Id="92" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="98" Count="7" />
      <LineId Id="97" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="107" Count="3" />
      <LineId Id="106" Count="0" />
      <LineId Id="49" Count="2" />
      <LineId Id="112" Count="3" />
      <LineId Id="111" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="117" Count="7" />
      <LineId Id="116" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="125" Count="7" />
      <LineId Id="55" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="60" Count="2" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>